Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8313

QtQuick Application (from Existing QML File) does not work with QtQuick 2.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.6.1
    • Qt Creator 2.6.0
    • Quick / QML Support
    • Windows7 SP1, Qt5 beta2, Creator provided by Qt5 beta2

    Description

      Steps to reproduce:

      • select 'File' -> 'Create New File or Project...'
      • select 'Applications' -> 'Qt Quick Application (from Existing QML File)
      • use a QML file of one of the examples inside the Qt5 repository that uses QtQuick 2.0
      • try to build and run

      Current behaviour:

      • Creator complains about 'module "QtQuick" version 2.0 is not installed' while executing

      Expected behaviour:

      • application runs fine without problems

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes