QtQuick wizards: Mark all wizards as either Qt Quick 1 or Qt Quick 2

Mark especially the import wizard as Qt Quick 1 only (we won't provide
a Qt Quick 2 version at the moment, and will most likely remove it completely
in 2.7)

Task-number: QTCREATORBUG-8313
Change-Id: I2dc0d4055a7e174d3d92525189c0d98e3b1f8860
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@digia.com>